--- a/src/ui/common/Popup.pug
+++ b/src/ui/common/Popup.pug
@@ -36,7 +36,7 @@ style.
 		top 0
 		width 100%
 	.popup-content
-		background var(--c-theme)
+		background var(--c-subreddit-theme)
 		border-radius 10px
 		max-height 90dvh
 		overflow auto
