--- a/src/ui/feature/subreddit/SubredditInfo.pug
+++ b/src/ui/feature/subreddit/SubredditInfo.pug
@@ -41,9 +41,10 @@ style.
 		padding 10px 0
 		justify-content flex-end
 	.subreddit-info-banner-image
-		aspect-ratio 8
-		border-radius 10px
+		border-radius 99px
+		height 64px
 		object-fit cover
+		width 100%
 	.subreddit-info-stats
 		margin-bottom 10px
 		width 100%
