--- a/src/ui/app/context/AppThemeColorContext.pug
+++ b/src/ui/app/context/AppThemeColorContext.pug
@@ -3,23 +3,21 @@ script.
 	import { Color } from '../../../lib/index.js'
 
 	set_theme_colors = (main_color, secondary_color) ->
+		document.body.classList.add('color-strategy-black-text') # whole-page color schemes TODO
 		if !main_color
 			main_color = secondary_color
 			secondary_color = null
-		if main_color
-			document.body.style.setProperty('--c-theme', main_color)
-			if new Color({ hex: main_color }).isLight() 
-				document.body.classList.add('color-strategy-black-text')
-				document.body.classList.remove('color-strategy-white-text')
+		text_color =
+			if main_color
+				if (new Color({ hex: main_color })).isLight()
+					'black'
+				else
+					'white'
 			else
-				document.body.classList.add('color-strategy-white-text')
-				document.body.classList.remove('color-strategy-black-text')
-		else
-			document.body.style.setProperty('--c-theme', 'var(--c-theme-default)')
-			document.body.classList.add('color-strategy-black-text')
-			document.body.classList.remove('color-strategy-white-text')
-		if secondary_color
-			document.body.style.setProperty('--c-theme-secondary', secondary_color)
+				null
+		document.body.style.setProperty('--c-subreddit-theme', main_color or 'var(--c-subreddit-theme-default)')
+		document.body.style.setProperty('--c-subreddit-theme-secondary', secondary_color or 'var(--c-subreddit-theme-secondary-default)')
+		document.body.style.setProperty('--c-subreddit-theme-text', text_color or 'var(--c-subreddit-theme-text-default)')
 
 	setContext('set_theme_colors', set_theme_colors)
 	set_theme_colors()
