--- a/src/ui/feature/user/UserFlair.pug
+++ b/src/ui/feature/user/UserFlair.pug
@@ -34,7 +34,7 @@ style.
 			border-radius 3px
 			padding 0 6px
 	.user-flair-emoji
-		border-radius 3px
+		border-radius 0
 		display inline-block
 		height 16px
 		&:hover
