--- a/src/ui/app/routing/AppContent.pug
+++ b/src/ui/app/routing/AppContent.pug
@@ -65,7 +65,7 @@ main
 style.
 	main
 		display grid
-		grid-template-columns 1fr calc(480px + 14em) 1fr
+		grid-template-columns 1fr 720px 1fr
 		height 100dvh
 		overflow auto
 		width 100dvw
