--- a/src/ui/common/Button.pug
+++ b/src/ui/common/Button.pug
@@ -15,7 +15,7 @@ script.
 	export new_tab = false
 	export options = null
 	export popup = false
-	export selected_value = null
+	export selected = null
 	export text = ''
 
 	popup_open = false
@@ -23,9 +23,9 @@ script.
 		action = -> popup_open = true
 
 {#if options}
-	select.button.button-dropdown(class:button-activated={activated} disabled={disabled || loading} on:change={e => action(e.target.value)} title={description} use:hotkey={key})
+	select.button.button-dropdown(class:button-activated={activated} class:disabled={disabled || loading} on:change={e => action(e.target.value)} title={description} use:hotkey={key})
 		{#each options as option}
-			option.button-dropdown-option(disabled={option.disabled} label={option.label} selected={selected_value === option.value} value={option.value})
+			option.button-dropdown-option(disabled={option.disabled} label={option.label} selected={selected === option.value} value={option.value})
 {:else if link}
 	a.button(class:button-activated={activated} class:button-disabled={disabled} class:button-with-icon-plus={icon_plus} href={disabled ? null : link} target={new_tab ? '_blank' : ''} title={description} use:hotkey={key})
 		{#if key}
@@ -37,7 +37,7 @@ script.
 {:else}
 	button.button(class:button-activated={activated} class:button-with-icon-plus={icon_plus} disabled={disabled || loading} on:keydown={e => e.key === 'Enter' && action()} on:mousedown={e => e.button === 0 && action()} title={description} use:hotkey={key})
 		{#if loading}
-			| loading...
+			| Loading...
 		{:else}
 			{#if key}
 				HotkeyLabel(key={key})
