--- a/src/ui/feature/post/PostComment.pug
+++ b/src/ui/feature/post/PostComment.pug
@@ -5,6 +5,8 @@ script.
 	
 	import Button from '../../common/Button.pug'
 	import FormattedHTML from '../../common/FormattedHTML.pug'
+	import SubredditTag from '../subreddit/SubredditTag.pug'
+	import UserByline from '../user/UserByline.pug'
 
 	export out_of_context = false
 	export short_id = null
@@ -27,11 +29,13 @@ script.
 		<!-- svelte-ignore a11y-unknown-role -->
 		article.comment(class:comment-deleted={(comment.author === '[deleted]' && comment.body[0] === '[') || comment.removal_reason} class:comment-downvoted={comment.likes === false} class:comment-highlighted={short_id === focus_comment_short_id} class:comment-upvoted={comment.likes === true} class:comment-with-low-score={!comment.score_hidden && comment.score < 1} data-likes={comment.likes} data-radial-menu='comment' data-short_id={short_id} role='comment' title={comment.edited ? Time.sToAbsRelTimeStr(comment.created_utc) + ' (edited ' + Time.sToAbsRelTimeStr(comment.edited) + ')' : Time.sToAbsRelTimeStr(comment.created_utc)})
 			button.comment-score(on:mousedown={() => api.submit(api.ID('comment_vote', short_id), { numerical_vote: comment.likes ? 0 : 1 })}) {comment.score_hidden ? '?' : comment.score}
+			aside.comment-user-info
+				UserByline(distinguish={comment.distinguished || (comment.is_submitter && 'submitter')} flair_color={comment.author_flair_background_color} flair_rich_text={comment.author_flair_richtext} flair_text={comment.author_flair_text} name={comment.author})
 			FormattedHTML(html={comment.body_html})
 		{#if out_of_context}
 			cite.comment-source-info
-				a(href='/r/{comment.subreddit}') in r/{comment.subreddit}
-				a(href='/r/{comment.subreddit}/post/{comment.link_id.slice(3)}/comment/{short_id}') {comment.link_title}
+				SubredditTag(name={comment.subreddit})
+				a(href='/r/{comment.subreddit}/post/{comment.link_id.slice(3)}/comment/{short_id}?context=1') {comment.link_title}
 		{:else}
 			ol.comment-replies
 				{#if comment.replies.length > 0}
@@ -39,25 +43,34 @@ script.
 						svelte:self(short_id={reply_short_id})
 				{#if comment.num_more_replies > 0}
 					menu.comment-more-replies
-						Button(action={() => api.load(comment.more_replies_id)} icon_plus={true} loading={more_replies_loading} text="{comment.num_more_replies} {comment.num_more_replies === 1 ? 'reply' : 'replies'}")
+						Button(action={() => api.load(comment.more_replies_id)} icon_plus={true} loading={more_replies_loading} text="{comment.num_more_replies} more")
 				{#if comment.deeper_replies}
 					menu.comment-more-replies
 						Button(link='/r/{comment.subreddit}/post/{comment.link_id.slice(3)}/comment/{short_id}' text='Continue thread...')
 
 style.
+	.comment-user-info
+		bottom 100%
+		left 0
+		opacity 0
+		position absolute
+		.comment:hover &
+			opacity 1
 	.comment
 		display inline-block
-		margin 1em
-		max-width 480px
+		margin 0.666em 1em
+		max-width 360px
 		position relative
 	:global(.comment > .md)
 		background var(--c-subreddit-theme)
-		border-radius 10px
+		border-radius 12px
 		color var(--c-subreddit-theme-text)
 		display inline-block
 		padding 10px
 	:global(.comment > .md img)
-		max-height 60px
+		border-radius 0
+		margin 0
+		max-height 64px
 		width auto
 	:global(.comment-deleted > .md)
 		opacity 0.25
@@ -69,7 +82,7 @@ style.
 	.comment-clip
 		display flex
 	.comment-more-replies
-		padding 0.5em 0
+		padding 0.666em 0
 	.comment-replies
 		border-left 1px solid var(--c-blend-normal)
 		padding-left 2em
