--- a/src/ui/feature/post/PostCommentList.pug
+++ b/src/ui/feature/post/PostCommentList.pug
@@ -24,20 +24,20 @@ script.
 	)
 
 ol.post-comments-list
-	{#if loading}
-		.post-comments-list-loading-notification Loading...
-	{:else if post}
-		{#each post.replies as reply_short_id}
+	{#if post}
+		{#each post.replies as reply_short_id (reply_short_id)}
 			PostComment(short_id={reply_short_id})
 		{#if post.num_more_replies > 0}
 			.post-more-replies
-				Button(action={() => api.load(post.more_replies_id)} icon_plus={true} loading={more_replies_loading} text="{post.num_more_replies} {post.num_more_replies === 1 ? 'reply' : 'replies'}")
+				Button(action={() => api.load(post.more_replies_id)} icon_plus={true} loading={more_replies_loading} text="{post.num_more_replies} more")
+	{:else if loading}
+		.post-comments-list-loading-notification Loading...
 
 style.
 	.post-comments-list
-		margin 0.5em 0
+		margin 0.666em 0
 	.post-comments-list-loading-notification
 		color var(--c-text-weak)
 		padding 1em 0
 	.post-more-replies
-		padding 0.25em 0
+		padding 0.666em 0
